@@ -1,28 +1,26 @@
 package com.titusfortner.craft_framework.pages;
 
 import com.titusfortner.craft_framework.elements.Element;
+import com.titusfortner.craft_framework.elements.ElementList;
 import org.openqa.selenium.By;
 import org.openqa.selenium.TimeoutException;
-import org.openqa.selenium.WebElement;
 import org.openqa.selenium.remote.RemoteWebDriver;
-
-import java.util.List;
 
 public class HeaderSection extends BasePage {
     private final Element menuButton = new Element(driver, By.id("react-burger-menu-btn"));
     private final Element logoutLink = new Element(driver, By.id("logout_sidebar_link"));
-    private final By shoppingCartBadge = By.className("shopping_cart_badge");
+    private final ElementList shoppingCartItems = new ElementList(driver, By.className("shopping_cart_badge"));
 
     public HeaderSection(RemoteWebDriver driver) {
         super(driver);
     }
 
     public Integer getNumberItemsInCart() {
-        List<WebElement> cartNumberElements = driver.findElements(shoppingCartBadge);
-        if (cartNumberElements.isEmpty()) {
+        shoppingCartItems.reset();
+        if (shoppingCartItems.isEmpty()) {
             return 0;
         } else {
-            return Integer.valueOf(cartNumberElements.get(0).getText());
+            return Integer.valueOf(shoppingCartItems.getFirst().getText());
         }
     }
 
